# xkcp-rs

./: .gitmodules  Cargo.toml  README.md  crates.js  help.html  index.html  release.toml  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml
crates/xkcp-rs/: Cargo.toml  README.md
crates/xkcp-rs/src/: error.rs  keccak.rs  lib.rs
crates/xkcp-sys/: Cargo.toml  README.md  build.rs
crates/xkcp-sys/src/: lib.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
search.desc/xkcp_rs/: xkcp_rs-desc-0-.js
search.desc/xkcp_sys/: xkcp_sys-desc-0-.js
src/xkcp_rs/: error.rs.html  keccak.rs.html  lib.rs.html
src/xkcp_sys/: lib.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
type.impl/core/: primitive.u8.js
type.impl/core/result/: enum.Result.js
type.impl/xkcp_sys/: struct.KeccakP1600_plain64_state.js  struct.KeccakWidth1600_DuplexInstanceStruct.js  struct.KeccakWidth1600_SpongeInstanceStruct.js  struct.KeccakWidth1600_SpongePRG_InstanceStruct.js  struct.TurboSHAKE_SpongeInstanceStruct.js  struct.Xoodoo_plain32_state.js  struct.Xoodyak_CyclistInstanceStruct.js
xkcp_rs/: all.html  enum.Error.html  fn.keccak224.html  fn.keccak256.html  fn.keccak384.html  fn.keccak512.html  fn.keccak_sponge.html  fn.sha3_224.html  fn.sha3_256.html  fn.sha3_384.html  fn.sha3_512.html  fn.shake128.html  fn.shake256.html  index.html  sidebar-items.js  struct.KeccakHash.html  type.Result.html
xkcp_rs/error/: enum.Error.html  type.Result.html
xkcp_rs/keccak/: struct.KeccakHash.html
xkcp_sys/: all.html  constant.Cyclist_ModeHash.html  constant.Cyclist_ModeKeyed.html  constant.Cyclist_PhaseDown.html  constant.Cyclist_PhaseUp.html  constant.IS_BIG_ENDIAN.html  constant.IS_LITTLE_ENDIAN.html  constant.KRAVATTE_ALIGNMENT.html  constant.KRAVATTE_FLAG_INIT.html  constant.KRAVATTE_FLAG_LAST_PART.html  constant.KRAVATTE_FLAG_NONE.html  constant.KRAVATTE_FLAG_SHORT.html  constant.KeccakP1600_implementation.html  constant.KeccakP1600_implementation_config.html  constant.KeccakP1600_stateAlignment.html  constant.KeccakP1600_stateSizeInBytes.html  constant.KeccakP200_implementation.html  constant.KeccakP200_stateAlignment.html  constant.KeccakP200_stateSizeInBytes.html  constant.KeccakP400_implementation.html  constant.KeccakP400_stateAlignment.html  constant.KeccakP400_stateSizeInBytes.html  constant.KeccakP800_implementation.html  constant.KeccakP800_implementation_config.html  constant.KeccakP800_stateAlignment.html  constant.KeccakP800_stateSizeInBytes.html  constant.KravatteAlignment.html  constant.KravatteMaxParallellism.html  constant.Kravatte_RollcOffset.html  constant.Kravatte_RollcSizeInBytes.html  constant.Kravatte_RolleOffset.html  constant.Kravatte_RolleSizeInBytes.html  constant.Kravatte_SANE_TagLength.html  constant.Kravatte_SANE_l.html  constant.Kravatte_SANSE_TagLength.html  constant.Kravatte_WBCAE_t.html  constant.Kravatte_WBC_b.html  constant.Kravatte_WBC_l.html  constant.MAXROUNDS.html  constant.NCOLUMS.html  (+282 more)
