[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.65"
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
license = "CC0-1.0"
repository = "https://github.com/DaniPopes/xkcp-rs"

[workspace.dependencies]
xkcp-rs = { version = "0.0.1", path = "crates/xkcp-rs" }
xkcp-sys = { version = "0.0.1", path = "crates/xkcp-sys" }
