[package]
name = "xkcp-rs"
description = "Safe wrappers to the XKCP library"
keywords = ["xkcp", "keccak", "sha3", "asm", "crypto"]
categories = ["algorithms", "cryptography", "api-bindings"]
homepage = "https://github.com/DaniPopes/xkcp-rs/tree/master/crates/xkcp-rs"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
xkcp-sys.workspace = true

[dev-dependencies]
hex-literal = "0.4"
