[package]
name = "xkcp-rs"
description = "Safe wrappers to the XKCP library"
keywords = ["xkcp", "keccak", "sha3", "asm", "crypto"]
categories = ["algorithms", "cryptography", "api-bindings"]
homepage = "https://github.com/DaniPopes/xkcp-rs/tree/master/crates/xkcp-rs"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = []

# xkcp-sys forwarded features
# Forces `AVR8` (8-bit AVR) XKCP target.
avr8 = ["xkcp-sys/avr8"]
# Forces `compact` XKCP target. WARNING: **much slower** than anything else
force-compact = ["xkcp-sys/force-compact"]
# Forces `generic32` or `generic64` XKCP target.
force-generic = ["xkcp-sys/force-generic"]
# Use `generic{32,64}lc` targets instead of `generic{32,64}`
# > Same as `generic64` but featuring the lane complementing technique for platforms without a "and not" instruction
generic-lc = ["xkcp-sys/generic-lc"]

[dependencies]
xkcp-sys.workspace = true

[dev-dependencies]
hex-literal = "0.4"
