[package]
name = "xkcp-rs"
description = "Safe wrappers to the XKCP library"
keywords = ["xkcp", "keccak", "sha3", "asm", "crypto"]
categories = ["algorithms", "cryptography", "api-bindings"]
homepage = "https://github.com/DaniPopes/xkcp-rs/tree/master/crates/xkcp-rs"
documentation = "https://danipopes.github.io/xkcp-rs/xkcp_rs"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = []

# xkcp-sys forwarded features
# Forces building for the `AVR8` (8-bit AVR) XKCP target.
avr8 = ["xkcp-sys/avr8"]
# Forces building for the `compact` XKCP target.
# **WARNING**: this is generally much slower than anything else.
force-compact = ["xkcp-sys/force-compact"]
# Forces building for the `generic32` or `generic64` XKCP target.
# Falls back to `compact` if not building for a 32 or 64 bit architecture.
force-generic = ["xkcp-sys/force-generic"]
# Uses the `generic{32,64}lc` XKCP targets instead of `generic{32,64}`.
# > Same as `generic64` but featuring the lane complementing technique for platforms without a "and not" instruction
generic-lc = ["xkcp-sys/generic-lc"]

[dependencies]
xkcp-sys.workspace = true

[dev-dependencies]
hex-literal = "0.4"
