[package]
name = "xkcp-sys"
description = "Native bindings to the XKCP library"
keywords = ["xkcp", "keccak", "sha3", "asm", "crypto"]
categories = ["algorithms", "cryptography", "external-ffi-bindings"]
homepage = "https://github.com/DaniPopes/xkcp-rs/tree/master/crates/xkcp-sys"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
exclude.workspace = true

[build-dependencies]
bindgen = "0.68"
cc = "1"
