[package]
name = "xkcp-sys"
description = "Native bindings to the XKCP library"
keywords = ["xkcp", "keccak", "sha3", "asm", "crypto"]
categories = ["algorithms", "cryptography", "external-ffi-bindings"]
homepage = "https://github.com/DaniPopes/xkcp-rs/tree/master/crates/xkcp-sys"
exclude = ["XKCP/doc", "XKCP/tests", "!XKCP/**/*.build"]

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
bindgen = "0.68"
cc = "1"

[features]
# Forces `AVR8` (8-bit AVR) XKCP target.
avr8 = []
# Forces `compact` XKCP target. WARNING: **much slower** than anything else
force-compact = []
# Forces `generic32` or `generic64` XKCP target.
force-generic = []
# Use `generic{32,64}lc` targets instead of `generic{32,64}`
# > Same as `generic64` but featuring the lane complementing technique for platforms without a "and not" instruction
generic-lc = []
