[package]
name = "xkcp-sys"
description = "Native bindings to the XKCP library"
keywords = ["xkcp", "keccak", "sha3", "asm", "crypto"]
categories = ["algorithms", "cryptography", "external-ffi-bindings"]
homepage = "https://github.com/DaniPopes/xkcp-rs/tree/master/crates/xkcp-sys"
documentation = "https://danipopes.github.io/xkcp-rs/xkcp_sys"
include = [
    "/src/",
    "/XKCP/**/*.build",
    "!/XKCP/bin/.build/",
    "/XKCP/lib/",
    "/XKCP/support/XKCBuild/src/",
    "/XKCP/Makefile",
    "/build.rs",
    "/LICENSE",
    "/README.md",
]

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
bindgen = { version = "0.71", default-features = false }
cc = "1"

[features]
# Forces building for the `AVR8` (8-bit AVR) XKCP target.
avr8 = []
# Forces building for the `compact` XKCP target.
# **WARNING**: this is generally much slower than anything else.
force-compact = []
# Forces building for the `generic32` or `generic64` XKCP target.
# Falls back to `compact` if not building for a 32 or 64 bit architecture.
force-generic = []
# Uses the `generic{32,64}lc` XKCP targets instead of `generic{32,64}`.
# > Same as `generic64` but featuring the lane complementing technique for platforms without a "and not" instruction
generic-lc = []
